--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
 		<br>
 		
 		<div class = "Div3">
-		<form method = "post">
+		<form>
 			<div class = "Div2">
 			<p><label><strong>Name:</strong>
 				<input name = "name" id = "name" type = "text" autocomplete = "on" size = "25">
@@ -134,8 +134,8 @@
 			<br>
 			
 			<p>
-				<input type = "submit" value = "Submit">
-				<input type = "reset" value = "Reset">
+				<input type = "submit" value = "submit">
+				<input type = "reset" value = "reset">
 			</p>
 			
 			<h2><footer>
@@ -145,5 +145,6 @@
 			</div>
 		</form>
 		</div>
+		<script src="/scripts/action.js"></script>
 	</body>
 </html>
